fixefd the header vertical overflow

--- a/src/output.css
+++ b/src/output.css
@@ -171,9 +171,6 @@
   .relative {
     position: relative;
   }
-  .-right-6 {
-    right: calc(var(--spacing) * -6);
-  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
@@ -189,14 +186,8 @@
   .z-10 {
     z-index: 10;
   }
-  .mx-4 {
-    margin-inline: calc(var(--spacing) * 4);
-  }
   .mx-auto {
     margin-inline: auto;
-  }
-  .my-2 {
-    margin-block: calc(var(--spacing) * 2);
   }
   .my-16 {
     margin-block: calc(var(--spacing) * 16);
@@ -222,12 +213,6 @@
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
   }
-  .mt-11 {
-    margin-top: calc(var(--spacing) * 11);
-  }
-  .mt-12 {
-    margin-top: calc(var(--spacing) * 12);
-  }
   .mt-14 {
     margin-top: calc(var(--spacing) * 14);
   }
@@ -249,20 +234,23 @@
   .ml-0 {
     margin-left: calc(var(--spacing) * 0);
   }
-  .ml-1 {
-    margin-left: calc(var(--spacing) * 1);
-  }
   .ml-4 {
     margin-left: calc(var(--spacing) * 4);
   }
   .ml-8 {
     margin-left: calc(var(--spacing) * 8);
   }
-  .ml-10 {
-    margin-left: calc(var(--spacing) * 10);
-  }
   .ml-16 {
     margin-left: calc(var(--spacing) * 16);
+  }
+  .ml-\[6rem\] {
+    margin-left: 6rem;
+  }
+  .ml-\[7rem\] {
+    margin-left: 7rem;
+  }
+  .ml-\[8rem\] {
+    margin-left: 8rem;
   }
   .ml-\[36\.5\%\] {
     margin-left: 36.5%;
@@ -392,9 +380,6 @@
   }
   .w-\[1170px\] {
     width: 1170px;
-  }
-  .w-\[1319px\] {
-    width: 1319px;
   }
   .w-full {
     width: 100%;
